cluster/apps/default/paperless/app/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paperless-admin-deny
spec:
  ipAllowList:
    sourceRange:
      - 0.0.0.0/32
      - ::/128
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-admin-deny
  annotations:
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - paperless.${SECRET_PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: paperless-admin-deny
      backendRefs:
        - name: paperless-app
          port: 8000
